[package]
name = "bank_core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
axum = "0.7"
redis = {version = "0.25", features = ["aio","tokio-comp","connection-manager"]}
reqwest = { version = "0.12", features = ["blocking"] }
futures = "0.3"
crc32fast = "1.3"
rand = "0.8"
lazy_static = "1.4"
serde = {version = "1.0" , features = ["derive"]}
serde_json = "1.0"
ahash = "0.8"
once_cell = "1.18"
anyhow = " 1.0"
